# kanji-learning

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: config.py  db.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: __init__.py  kanji.py  search.py  tooltips.py
apps/api/app/models/: __init__.py  edge.py  example.py  kanji.py  vocabulary.py
apps/api/app/repositories/: __init__.py  kanji_repository.py  search_repository.py
apps/api/app/schemas/: graph.py  kanji.py  vocabulary.py
apps/api/app/services/: kanji_service.py  seed_service.py
apps/api/tests/: test_kanji_api.py  test_models.py  test_search_api.py  test_seed_service.py  test_tooltips_api.py
apps/web/: package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/map/: kanji-map.tsx  kanji-node.tsx  kanji-tooltip.tsx
apps/web/src/components/workspace/: focus-strip.tsx  knowledge-workspace.tsx  relationship-list.tsx  search-sidebar.tsx  study-inspector.tsx
apps/web/src/lib/: api.ts  knowledge-workspace.ts  types.ts
apps/web/tests/: knowledge-workspace.test.tsx  map-tooltip.test.tsx
data/seed/: edges.json  examples.json  kanji.json  vocabulary.json
docs/superpowers/specs/: 2026-07-01-kanji-knowledge-list-workspace-design.md
